@@ -1,0 +1,63 @@
+/* Copyright (C) 1996, 1997, 1998, 2000 Free Software Foundation, Inc.
+   This file is part of the GNU C Library.
+   Contributed by Ulrich Drepper <drepper@gnu.ai.mit.edu>, 1996.
+
+   The GNU C Library is free software; you can redistribute it and/or
+   modify it under the terms of the GNU Lesser General Public
+   License as published by the Free Software Foundation; either
+   version 2.1 of the License, or (at your option) any later version.
+
+   The GNU C Library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   Lesser General Public License for more details.
+
+   You should have received a copy of the GNU Lesser General Public
+   License along with the GNU C Library; if not, write to the Free
+   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
+   02111-1307 USA.  */
+
+#include <wctype.h>
+
+int
+iswspace (wint_t wc)
+{
+  return isspace(wc);
+}
+
+
+int
+iswalpha (wint_t wc)
+{
+  return isalpha(wc);
+}
+
+
+int
+iswalnum (wint_t wc)
+{
+  return isalnum(wc);
+}
+
+
+int
+iswprint (wint_t wc)
+{
+  return isprint(wc);
+}
+
+
+int
+towupper (wint_t wc)
+{
+  return toupper(wc);
+}
+
+
+int
+towlower (wint_t wc)
+{
+  return tolower(wc);
+}
+
+
