@@ -1,3 +1,7 @@
+Fri Nov 21 21:25:47 2003  Peter Naulls  <peter@chocky.org>
+
+	* clib/wctype.h, wchar/wctype.h: Added wctype functions.
+
 Fri Nov 21 14:26:31 2003  Peter Naulls  <peter@chocky.org>
 
 	* clib/time.h: Rename parameters inline with glibc, and to
@@ -8,7 +12,6 @@ Fri Nov 21 14:26:31 2003  Peter Naulls  <peter@chocky.org>
 	* clib/unistd.h: Bring somewhat inline with glibc, and avoid
 	  warnings with brk/sbrk declarations.
 	* sys/brk.c: Change sbrk defintion to match above
-
 
 Wed Nov 19 00:00:01 2003  John Tytgat  <John.Tytgat@aaug.net>
 
